// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should be able to render 1`] = `
<div>
  <div
    class="toolbar_root__17ktofz0"
  >
    <div
      class="toolbar_role__17ktofz1"
    >
      <span
        class="user_medium_orange__b5o5bsd style_iconMedium__qkwts32 style_iconBase__qkwts30"
      />
      <span
        class="flex flex-none outline-none border-none p-0 h-8 items-center rounded"
        role="switch"
      >
        <span
          class="flex relative inline-block bg-transparent h-6 justify-items-center border border-emerald-600 rounded"
        >
          <span
            class="relative inline-block m-0 px-1 w-12 h-full transition-colors overflow-hidden rounded bg-emerald-100"
          >
            <span
              class="absolute inline-block bg-emerald-500 h-full w-6 left-0 top-0 transition-transform"
            />
          </span>
          <input
            class="hidden"
            type="checkbox"
          />
        </span>
      </span>
      <span
        class="eye_medium_orange__1p3uyfcd style_iconMedium__qkwts32 style_iconBase__qkwts30"
      />
    </div>
  </div>
</div>
`;

exports[`should change current check 1`] = `
<div>
  <div
    class="toolbar_root__17ktofz0"
  >
    <div
      class="toolbar_role__17ktofz1"
    >
      <span
        class="user_medium_orange__b5o5bsd style_iconMedium__qkwts32 style_iconBase__qkwts30"
      />
      <span
        class="flex flex-none outline-none border-none p-0 h-8 items-center rounded"
        role="switch"
      >
        <span
          class="flex relative inline-block bg-transparent h-6 justify-items-center border border-emerald-600 rounded"
        >
          <span
            class="relative inline-block m-0 px-1 w-12 h-full transition-colors overflow-hidden rounded bg-emerald-300"
          >
            <span
              class="absolute inline-block bg-emerald-500 h-full w-6 left-0 top-0 transition-transform translate-x-6"
            />
          </span>
          <input
            checked=""
            class="hidden"
            type="checkbox"
          />
        </span>
      </span>
      <span
        class="eye_medium_orange__1p3uyfcd style_iconMedium__qkwts32 style_iconBase__qkwts30"
      />
    </div>
  </div>
</div>
`;
